[gd_scene load_steps=56 format=3]

[ext_resource type="PackedScene" uid="uid://cgaeu2ag4857g" path="res://Scene/Base/BaseMonster.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Monster/Monster_24.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bn8yw7j4rj207" path="res://Art/Monster/Cow/Third/DefineSprite_Monster24BG/1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://blq3pgec0ff4f" path="res://Art/Monster/Red_eyes/RedEyes.png" id="4"]
[ext_resource type="Texture2D" uid="uid://csvchu585mx7g" path="res://Art/Monster/Cow/Third/Heart.png" id="5"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "4" )
region = Rect2(0, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "4" )
region = Rect2(60, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "4" )
region = Rect2(120, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "4" )
region = Rect2(180, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "4" )
region = Rect2(240, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "4" )
region = Rect2(300, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "4" )
region = Rect2(360, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "4" )
region = Rect2(420, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "4" )
region = Rect2(480, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "4" )
region = Rect2(540, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "4" )
region = Rect2(600, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "4" )
region = Rect2(660, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "4" )
region = Rect2(720, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "4" )
region = Rect2(780, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "4" )
region = Rect2(840, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "4" )
region = Rect2(900, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "4" )
region = Rect2(960, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "4" )
region = Rect2(1020, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "4" )
region = Rect2(1080, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "4" )
region = Rect2(1140, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource( "4" )
region = Rect2(1200, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource( "4" )
region = Rect2(1260, 0, 60, 54)
script = null

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource( "4" )
region = Rect2(1320, 0, 60, 54)
script = null

[sub_resource type="SpriteFrames" id="24"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": SubResource( "11" )
}, {
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}, {
"duration": 1.0,
"texture": SubResource( "21" )
}, {
"duration": 1.0,
"texture": SubResource( "22" )
}, {
"duration": 1.0,
"texture": SubResource( "23" )
}],
"loop": true,
"name": &"Eyes",
"speed": 24.0
}]
script = null

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource( "5" )
region = Rect2(0, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource( "5" )
region = Rect2(122, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource( "5" )
region = Rect2(244, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource( "5" )
region = Rect2(366, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource( "5" )
region = Rect2(488, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource( "5" )
region = Rect2(610, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource( "5" )
region = Rect2(732, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource( "5" )
region = Rect2(854, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource( "5" )
region = Rect2(976, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource( "5" )
region = Rect2(1098, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource( "5" )
region = Rect2(1220, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource( "5" )
region = Rect2(1342, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource( "5" )
region = Rect2(1464, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource( "5" )
region = Rect2(1586, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource( "5" )
region = Rect2(1708, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource( "5" )
region = Rect2(1830, 0, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource( "5" )
region = Rect2(0, 134, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource( "5" )
region = Rect2(122, 134, 122, 134)
script = null

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource( "5" )
region = Rect2(244, 134, 122, 134)
script = null

[sub_resource type="SpriteFrames" id="44"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "25" )
}, {
"duration": 1.0,
"texture": SubResource( "26" )
}, {
"duration": 1.0,
"texture": SubResource( "27" )
}, {
"duration": 1.0,
"texture": SubResource( "28" )
}, {
"duration": 1.0,
"texture": SubResource( "29" )
}, {
"duration": 1.0,
"texture": SubResource( "30" )
}, {
"duration": 1.0,
"texture": SubResource( "31" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "33" )
}, {
"duration": 1.0,
"texture": SubResource( "34" )
}, {
"duration": 1.0,
"texture": SubResource( "35" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}, {
"duration": 1.0,
"texture": SubResource( "37" )
}, {
"duration": 1.0,
"texture": SubResource( "38" )
}, {
"duration": 1.0,
"texture": SubResource( "39" )
}, {
"duration": 1.0,
"texture": SubResource( "40" )
}, {
"duration": 1.0,
"texture": SubResource( "41" )
}, {
"duration": 1.0,
"texture": SubResource( "42" )
}, {
"duration": 1.0,
"texture": SubResource( "43" )
}],
"loop": true,
"name": &"heart",
"speed": 25.0
}]
script = null

[sub_resource type="Animation" id="45"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mr_player:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BG:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG/SpecialEffect_1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.0001, 1.0002, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"fall_items"
}, {
"args": [],
"method": &"fall_medicine"
}, {
"args": [],
"method": &"fall_stone_"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MonsterDir/mr_ani:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
script = null

[sub_resource type="Animation" id="46"]
length = 0.76
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["heart"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mr_player:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="AnimationLibrary" id="47"]
_data = {
"death": SubResource( "45" ),
"heart": SubResource( "46" )
}
script = null

[sub_resource type="RectangleShape2D" id="48"]
script = null

[sub_resource type="CircleShape2D" id="49"]
radius = 54.037
script = null

[sub_resource type="RectangleShape2D" id="50"]
size = Vector2(700, 123)
script = null

[node name="Monster_24" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="BG" type="Sprite2D" parent="." index="1"]
position = Vector2(-8, -100)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="SpecialEffect_1" type="AnimatedSprite2D" parent="BG" index="0"]
position = Vector2(37, -73)
sprite_frames = SubResource( "24" )
animation = &"Eyes"
autoplay = "Eyes"
frame_progress = 0.414038

[node name="SpecialEffect_2" type="AnimatedSprite2D" parent="BG/SpecialEffect_1" index="0"]
position = Vector2(-53, 0)
sprite_frames = SubResource( "24" )
animation = &"Eyes"
autoplay = "Eyes"
frame_progress = 0.272955
flip_h = true

[node name="MonsterDir" parent="." index="2"]
visible = false
metadata/_edit_lock_ = true

[node name="mr_ani" parent="MonsterDir" index="0"]
sprite_frames = SubResource( "44" )
animation = &"heart"
autoplay = "heart"
metadata/_edit_lock_ = true

[node name="mr_player" parent="." index="3"]
speed_scale = 1.5
libraries = {
"": SubResource( "47" )
}

[node name="HitBox" parent="BaseDamageBox/HitBox" index="0"]
shape = SubResource( "48" )
disabled = true

[node name="HurtBox" parent="BaseDamageBox" index="1"]
collision_layer = 3136

[node name="HurtBox" parent="BaseDamageBox/HurtBox" index="0"]
shape = SubResource( "49" )
disabled = true
metadata/_edit_lock_ = true

[node name="pz" parent="." index="5"]
position = Vector2(0, 60)
shape = SubResource( "50" )
metadata/_edit_lock_ = true

[node name="add_eyes" type="Timer" parent="." index="11"]
wait_time = 0.9
autostart = true

[node name="Fire" type="Timer" parent="." index="12"]
wait_time = 3.5

[node name="Heart" type="Timer" parent="." index="13"]

[connection signal="timeout" from="add_eyes" to="." method="_on_add_eyes_timeout" flags=18]
[connection signal="timeout" from="Fire" to="." method="_on_fire_timeout" flags=18]
[connection signal="timeout" from="Heart" to="." method="_on_heart_timeout" flags=18]
